# breadbox-r2

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  design.gv
include/: breadbox.h  log.h  message.h  model.h  options.h  prop.h  stage.h  subscription.h  update.h  view.h
src/: breadbox.c  log.c  main.c  model.c  options.c  prop.c  stage.c  subscription.c  update.c  view.c
